adding plots to CM SR

--- a/content/research/2018-04-17-country-music.html
+++ b/content/research/2018-04-17-country-music.html
@@ -12,7 +12,6 @@ tags: []
 <p>John A. Bernau</p>
 <p>ABSTRACT: This article examines the rise of “self-references” in contemporary country music lyrics - descriptions of a ‘country’ lifestyle, specific styles of music consumption, or reference to famous artists. Using a dataset of 27,384 songs from 1989-2014, I show how these words constitute a meta-cultural practice that constructs and maintains genre boundaries, authenticity, and consecration. Becoming increasingly prevalent since the 1990s, self-references are also more likely to appear in debut albums, songs by Hall-of-Fame artists, and highly repetitive songs, while less likely to appear after Presidential elections. In sum, today’s artists use self-references to draw and perpetuate socio-cultural boundaries.</p>
 <p><em>Under Review</em> May 2018</p>
-<div class="figure">
-<img src="/static/nashcopy.jpg" />
-
-</div>
+<hr />
+<p><strong>Selected Plots</strong></p>
+<p><img src="/research/cm_sr1.jpg" /> <img src="/research/cm_sr2.jpg" /> <img src="/research/cm_sr3.jpg" /></p>
