--- a/content/code/baylor.html
+++ b/content/code/baylor.html
@@ -1,5 +1,5 @@
 ---
-title: 'Baylor Religion Survey 2010'
+title: 'Plotting Regional Concentration of American Denominations'
 author: John A. Bernau
 date: '2018-04-17'
 slug: baylor
@@ -10,7 +10,7 @@ tags: []
 
 
 <hr />
-<p>In this post, I’ll be using R to download, clean, and graph some basic descriptive stats about American religion using the <a href="https://www.baylor.edu/BaylorReligionSurvey/">Baylor Religion Survey of 2010</a>.</p>
+<p>In this post, I’ll be using R to download, clean, and plot some basic descriptive stats about the regional concentration of American denominations using the <a href="https://www.baylor.edu/BaylorReligionSurvey/">Baylor Religion Survey of 2010</a>.</p>
 <p>To begin, make sure to load a few basic packages.</p>
 <pre class="r"><code>require(&quot;tidyverse&quot;)
 require(&quot;foreign&quot;)
