--- a/content/code/congregation_size.html
+++ b/content/code/congregation_size.html
@@ -58,8 +58,8 @@ one$DENOM1[startsWith(one$DENOM1, &quot;United Methodist&quot;)] &lt;- &quot;Uni
   geom_line(aes(group = one$congrega, alpha = value)) +
   labs(x = &quot;year&quot;, y = &quot;Avg Wkly Attend&quot;)</code></pre>
 <p><img src="/code/congregation_size_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
-<p>Takeaways…TOO MANY CATHOLICS!<br />
-This final graph is much the same, but plots each denomination in its own pane using <code>facet_wrap()</code>, removes the color legend <code>scale_color...(guide=FALSE)</code>, and adds some annotations / theme elements. With many categories, these graphs are hard to size correctly. I’ve given a size that works for me and attached the plot here as a raw image file.</p>
+<p>Takeaways…TOO MANY CATHOLICS!</p>
+<p>This final graph is much the same, but plots each denomination in its own pane using <code>facet_wrap()</code>, removes the color legend <code>scale_color...(guide=FALSE)</code>, and adds some annotations / theme elements. With many categories, these graphs are hard to size correctly. I’ve given a size that works for me and attached the plot here as a raw image file.</p>
 <pre class="r"><code>ggplot(one, aes(x = date, y = value, color = DENOM1)) +
   geom_point() +
   geom_line(aes(group = one$congrega)) +
