--- a/content/code/dataviz2.html
+++ b/content/code/dataviz2.html
@@ -129,6 +129,11 @@ describe(mtcars)
 <p>Because they are numbers, in this dataset “year” and “cyl” are both assumed to be continuous variables. However, we want to graph them as if they are categorical variables. To do this you will write the variables like so: “factor(year)” &amp; “factor(cyl)”.</p>
 <p>Set shape to year and color to cylinder. Remember to use the factor notation described above! HINT: aes(shape=factor(variable name), color=factor(variable name))</p>
 <p>Set the title of these legends to “Year” and “Cylinders.” When you’re done, save this as an object “ex4”, export as a jpg.</p>
+<hr />
 <p><a href="/xcode/">Code Home</a><br />
 <a href="/code/dataviz1">Part 1 &lt;&lt;&lt;</a><a href="/code/dataviz3/">&gt;&gt;&gt; Part 3</a></p>
+<hr />
+</div>
+<div id="copyright-2018-john-a.-bernau" class="section level3">
+<h3><em>Copyright © 2018 John A. Bernau</em></h3>
 </div>
