--- a/content/research/2018-04-17-country-music.html
+++ b/content/research/2018-04-17-country-music.html
@@ -15,3 +15,7 @@ tags: []
 <hr />
 <p><strong>Selected Plots</strong></p>
 <p><img src="/research/cm_sr1.jpg" /> <img src="/research/cm_sr2.jpg" /> <img src="/research/cm_sr3.jpg" /></p>
+<hr />
+<div id="copyright-2018-john-a.-bernau" class="section level3">
+<h3><em>Copyright © 2018 John A. Bernau</em></h3>
+</div>
