--- a/content/code/dataviz4.html
+++ b/content/code/dataviz4.html
@@ -141,6 +141,11 @@ fonts()</code></pre>
 <div id="exercise-8" class="section level3">
 <h3>EXERCISE 8</h3>
 <p>Using the plot from ex4, make the titles size 15 and in boldface. Save this as an object “ex8”, export as a jpg.</p>
+<hr />
 <p><a href="/xcode/">Code Home</a><br />
 <a href="/code/dataviz3">Part 3 &lt;&lt;&lt;</a></p>
+<hr />
+</div>
+<div id="copyright-2018-john-a.-bernau" class="section level3">
+<h3><em>Copyright © 2018 John A. Bernau</em></h3>
 </div>
